# psyche-rs

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  constraints.cypher  docker-compose.yml
.github/workflows/: test.yml
all_souls/daringsby/: identity.toml
all_souls/layka/: config.toml  docker-compose.yml  identity.toml  self.txt
containers/dev/: docker-compose.yml
daemon-common/: Cargo.toml
daemon-common/src/: lib.rs
daringsby/: Cargo.toml  motor_log.txt
daringsby/src/: args.rs  battery_motor.rs  battery_sensor.rs  canvas_motor.rs  canvas_stream.rs  combobulator_prompt.txt  crypto.rs  development_status.rs  development_status.txt  ear.rs  face_clustering_service.rs  face_embedding_service.rs  face_gallery.rs  face_recognition_service.rs  heard_self_sensor.rs  heard_user_sensor.rs  heartbeat.rs  identify_motor.rs  index.html  lib.rs  llm_helpers.rs  log_file.rs  log_memory_motor.rs  log_sensation_layer.rs  logger.rs  logging_motor.rs  look_motor.rs  look_sensor.rs  look_stream.rs  main.rs  memory_cleanup_service.rs  memory_consolidation_motor.rs  memory_consolidation_sensor.rs  memory_consolidation_service.rs  memory_graph.rs  memory_helpers.rs  memory_projection.rs  memory_viz.html  motor_helpers.rs  motors.rs  (+26 more)
daringsby/src/prompts/: combobulator_prompt.txt  quick_prompt.txt  voice_prompt.txt  will_prompt.txt
daringsby/static/: asr_view.html  audio_test.html
daringsby/tests/: args.rs  canvas_motor.rs  drawing_pipeline.rs  log_memory_motor.rs  logging_motor.rs  look_motor.rs  source_read_motor.rs  source_search_motor.rs  source_tree_motor.rs  svg_motor.rs  vision.rs  vision_motor.rs
distill/: Cargo.toml
distill/src/: lib.rs  main.rs
distill/tests/: cli.rs  pull_model.rs  stream.rs
distilld/: Cargo.toml
distilld/src/: lib.rs  main.rs
distilld/tests/: cli.rs  pull_model.rs  stream.rs
docs/: faced.md  recognized.md  seen.md  whisperd.md
examples/: full_cycle.rs
faced/: Cargo.toml
faced/src/: lib.rs  main.rs  memory.rs  opencv_recognizer.rs
features/feeling/: basic_vertical.feature
heard/: Cargo.toml
heard/src/: audio_segmenter.rs  lib.rs  main.rs  test_helpers.rs
layka/: AGENTS.md  layka.sh  memory-loop.sh  recall.sh  start.sh
layka/functions/: blink_led.sh  record.sh  speak.sh
neo4j_data/dbms/: auth.ini
psyche/: Cargo.toml
psyche-rs/: Cargo.toml
psyche-rs/examples/: demo_turn.rs  full_cycle.rs
psyche-rs/src/: abort_guard.rs  action.rs  cluster_analyzer.rs  codec.rs  combobulator.rs  combobulator_prompt.txt  conversation.rs  countenance.rs  ear.rs  fair_llm.rs  genius.rs  genius_queue.rs  genius_runner.rs  impression.rs  impression_sensor.rs  lib.rs  llm.rs  llm_client.rs  llm_parser.rs  llm_pool.rs  llm_types.rs  memory.rs  memory_sensor.rs  memory_store.rs  motor.rs  motor_executor.rs  mouth.rs  narrator.rs  neighbor.rs  neo_qdrant_store.rs  ollama_llm.rs  plain_describe.rs  psyche.rs  psyche_event.rs  psyche_supervisor.rs  quick.rs  recent_actions.rs  retry.rs  round_robin_llm.rs  runtime.rs  (+19 more)
psyche-rs/src/llm/: types.rs
psyche-rs/src/llm_client/: tests.rs
psyche-rs/src/pete/: mod.rs
psyche-rs/src/prompts/: will_prompt.txt
psyche-rs/src/store/: dummy_store.rs
psyche-rs/src/wits/: fond.rs  mod.rs  quick.rs  will.rs
psyche-rs/tests/: conversation.rs  coqui_mouth.rs  embedding_store.rs  fond.rs  full_cycle.rs  genius_load.rs  motor_tests.rs  narrator_tests.rs  parse_stream.rs  pete.rs  psyche_build.rs  psyche_reactive.rs  psyche_tick.rs  quick_neighbors.rs  quick_stream.rs  reactive_wit.rs  responsiveness.rs  retry.rs  store_tests.rs  variants.rs  voice_reactive.rs  voice_tests.rs  voice_turn.rs
psyche/features/memory/: example.feature
psyche/features/voice/: example.feature
psyche/src/: distiller.rs  lib.rs  memory.rs  models.rs  utils.rs  wit.rs
psyche/src/llm/: chat.rs  embed.rs  limited.rs  mock_chat.rs  mock_embed.rs  mod.rs  ollama.rs  prompt.rs
psyche/tests/: basic.rs  distiller.rs  llm.rs  memory.rs  qdrant.rs  rover_data.rs  subgraph.rs  utils.rs  wit_distill.rs
psyched/: Cargo.toml
psyched/config/: default.toml
psyched/src/: config.rs  daemon.rs  db_memory.rs  distillers.rs  file_memory.rs  lib.rs  llm_config.rs  main.rs  memory_client.rs  router.rs  sensor.rs  socket_pipe.rs  wit.rs
psyched/tests/: basic_vertical.rs  connection_fallback.rs  distiller_config.rs  ear_pipe.rs  full_loop.rs  llm_config.rs  nonblocking.rs  pipe_depends.rs  postprocess_recall.rs  seen_pipe.rs  sensor_config.rs  spoken_config.rs  wit.rs  wit_from_config.rs
qdrant_data/: raft_state.json
recognized/: Cargo.toml
recognized/src/: lib.rs  main.rs
rememberd/: Cargo.toml
rememberd/src/: lib.rs  main.rs  policy.rs  rpc.rs  store.rs
rememberd/tests/: list.rs  memorize.rs  query_vector.rs  recall_policy.rs  recollect.rs
scripts/: boot-image.sh  distilld  download-mars-rover-data.sh  heard.sh  inject-sensation.sh  project_embeddings.py  psyched  rememberd  run-psyched-dev.sh  say  sourcedesc  spoken  status.sh  up  whisperd  would
seen/: Cargo.toml
seen/src/: lib.rs  main.rs
soul/: config.toml  self.txt
soul/config/: llm.toml  pipeline.toml
soul/memory/: instant.jsonl  sensation.jsonl  situation.jsonl
spoken/: Cargo.toml
spoken/src/: lib.rs  main.rs
src/: codec.rs  countenance.rs  lib.rs  llm.rs  main.rs  memory.rs  motor.rs  mouth.rs  narrator.rs  psyche.rs  runtime.rs  store.rs  voice.rs
src/pete/: mod.rs
src/store/: embedding_store.rs  mod.rs  neo4j_store.rs
src/wits/: combobulator.rs  fond.rs  mod.rs  quick.rs  (+1 more)
stream_prefix/: Cargo.toml  mod.rs
tests/: codec.rs  conversation.rs  emotion_flow.rs  fond.rs  full_cycle.rs  layka_dispatch.rs  layka_split.rs  memory.rs  motor_tests.rs  narrator_tests.rs  pete.rs  psyche_build.rs  psyche_tick.rs  quick_stream.rs  runtime_tests.rs  store_tests.rs  variants.rs  voice_countenance.rs  voice_tests.rs  voice_turn.rs
whisperd/: Cargo.toml  whisperd.service
whisperd/src/: audio_segmenter.rs  lib.rs  main.rs  model.rs  test_helpers.rs  transcriber.rs
whisperd/tests/: fetch.rs
would/: Cargo.toml
would/src/: lib.rs  main.rs
(+11 files in other folders)
