[package]
name = "daringsby"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
psyche-rs = { path = "../psyche-rs" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
clap = { version = "4", features = ["derive"] }
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4"
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
async-stream = "0.3"
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }
ollama-rs = { version = "0.3.2", features = ["stream"] }
once_cell = "1"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
include_dir = "0.7"
reqwest = { version = "0.12", features = ["stream"] }
segtok = "0.1.5"
url = "2"
bytes = "1"
axum = { version = "0.7", features = ["macros", "ws"] }
hound = "3"
base64 = "0.21"
anyhow = "1"
battery = "0.7"

[dev-dependencies]
httpmock = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
futures = "0.3"
hyper = "1"
http-body-util = "0.1"
tower = { version = "0.4", features = ["util"] }
tokio-tungstenite = "0.21"
tempfile = "3"
serial_test = "2"

[features]
logging-motor = []
vision = []
canvas-motor = []
mouth = []
source-read-motor = []
source-search-motor = []
source-tree-motor = []
svg-motor = []
log-memory-motor = []
recall-motor = []
canvas-stream = []
development-status-sensor = []
heard-self-sensor = []
heard-user-sensor = []
heartbeat-sensor = []
self-discovery-sensor = []
source-discovery-sensor = []
moment-feedback = []
debug_memory = []
battery-sensor = []
battery-motor = []
default = [
    "logging-motor",
    "canvas-motor",
    "svg-motor",
    "canvas-stream",
    "vision",
    "mouth",
    "development-status-sensor",
    "source-read-motor",
    "source-search-motor",
    "source-tree-motor",
    "log-memory-motor",
    "recall-motor",
    "heard-self-sensor",
    "heard-user-sensor",
    "heartbeat-sensor",
    "battery-sensor",
    "battery-motor",
]
