[package]
name = "distill"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.41", features = ["derive"] }
ollama-rs = { version = "0.3.2", features = ["stream"] }
tera = "1.20.0"
tokio = { version = "1.46.1", features = ["full"] }
tokio-stream = "0.1.17"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
indicatif = "0.17"

[dev-dependencies]
assert_cmd = "2.0.17"
httpmock = "0.7.0"
tokio = { version = "1", features = ["macros"] }
hyper = "0.14"
