[package]
name = "heard"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
whisper-rs = "0.14"
webrtc-vad = "0.4"
async-trait = "0.1"
anyhow = "1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
tempfile = "3"
tracing-test = { version = "0.2", features = ["no-env-filter"] }
