[package]
name = "psyche-rs"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
futures = "0.3"
llm = "1.3.1"
tokio = { version = "1", features = ["rt", "macros"] }
tokio-stream = "0.1.17"
segtok = "0.1.5"

[dev-dependencies]
httpmock = "0.7.0"
tokio = { version = "1", features = ["macros", "rt"] }
