[package]
name = "psyche-rs"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
futures = "0.3"
ollama-rs = { version = "0.3.2", features = ["stream"] }
async-stream = "0.3"
tokio = { version = "1", features = ["rt", "macros"] }
tokio-stream = "0.1.17"
segtok = "0.1.5"
tracing = "0.1"
tinytemplate = "1"
thiserror = "1"
regex = "1"
quick-xml = "0.31"
rand = "0.8"
sha2 = "0.10"
anyhow = "1"
reqwest = { version = "0.12", features = ["json", "blocking"] }
uuid = { version = "1", features = ["v4"] }
url = "2"
once_cell = "1"

[dev-dependencies]
httpmock = "0.7.0"
tokio = { version = "1", features = ["macros", "rt"] }
url = "2"

[features]
canvas-motor = []
svg-motor = []
default = ["canvas-motor", "svg-motor"]
