[package]
name = "psyche"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"
async-trait = "0.1"
tokio-stream = "0.1"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
async-stream = "0.3"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde", "clock"] }

# optional data stores
qdrant-client = { version = "1", optional = true }
neo4rs = { version = "0.9.0-rc.6", optional = true }

[features]
default = []
qdrant = ["qdrant-client"]
neo4j = ["neo4rs"]

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
tokio-test = "0.4"
tempfile = "3"
tracing-test = { version = "0.2", features = ["no-env-filter"] }
