[package]
name = "psyched"
version = "0.1.0"
edition = "2021"

[dependencies]
psyche = { path = "../psyche" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4"] }
anyhow = "1"

[dev-dependencies]
tempfile = "3"

[lib]
path = "src/lib.rs"
