[package]
name = "psyched"
version = "0.1.0"
edition = "2021"

[dependencies]
psyche = { path = "../psyche", features = ["qdrant", "neo4j"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.5"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde", "clock"] }
clap = { version = "4", features = ["derive"] }
qdrant-client = "1"
neo4rs = "0.9.0-rc.6"

[dev-dependencies]
tempfile = "3"

[lib]
path = "src/lib.rs"
