[package]
name = "psyched"
version = "0.1.0"
edition = "2021"

[dependencies]
psyche = { path = "../psyche" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.5"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
indexmap = { version = "2", features = ["serde"] }
daemon-common = { path = "../daemon-common" }
would = { path = "../would" }

[lib]
path = "src/lib.rs"

[dev-dependencies]
tokio-test = "0.4"
