[package]
name = "recognized"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
uuid = { version = "1", features = ["v4", "serde"] }
daemon-common = { path = "../daemon-common" }
async-trait = "0.1"
opencv = { version = "0.95", features = ["img_hash"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros"] }
tempfile = "3"
