[package]
name = "rememberd"
version = "0.1.0"
edition = "2021"

[dependencies]
psyche = { path = "../psyche", features = ["qdrant", "neo4j"] }
psyched = { path = "../psyched" }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
daemon-common = { path = "../daemon-common" }
qdrant-client = "1"
neo4rs = "0.9.0-rc.6"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
tracing-test = { version = "0.2", features = ["no-env-filter"] }
tempfile = "3"
