[package]
name = "seen"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
base64 = "0.21"
ollama-rs = { version = "0.3.2", features=["stream"] }
psyche = { path = "../psyche" }
tokio = { version = "1", features=["full"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.5", features=["derive"] }
daemon-common = { path = "../daemon-common" }
async-trait = "0.1"
chrono = { version = "0.4", features=["serde"] }
futures-util = "0.3"
uuid = { version = "1", features=["v4", "serde"] }
serde_json = "1"
async-stream = "0.3"

[dev-dependencies]
httpmock = "0.7"
tokio = { version = "1", features=["macros"] }
tempfile = "3"
