[package]
name = "seen"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
base64 = "0.21"
ollama-rs = { version = "0.3.2", features = ["stream"] }
tokio = { version = "1", features=["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.5", features=["derive"] }
daemon-common = { path = "../daemon-common" }
stream-prefix = { path = "../stream_prefix" }

tokio-stream = "0.1.17"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[dev-dependencies]
httpmock = "0.7"
tokio = { version = "1", features=["macros"] }
tempfile = "3"
