[package]
name = "whisperd"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
whisper-rs = "0.14"
webrtc-vad = "0.4"
async-trait = "0.1"
anyhow = "1"
daemon-common = { path = "../daemon-common" }
hound = "3.5"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
reqwest = { version = "0.12", features = ["stream"] }
indicatif = "0.17"
inquire = "0.6"
futures-util = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
tempfile = "3"
tracing-test = { version = "0.2", features = ["no-env-filter"] }
assert_cmd = "2"
httpmock = "0.7"
