[package]
name = "would"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
async-trait = "0.1"
tokio-stream = "0.1"
roxmltree = "0.19"
psyche = { path = "../psyche" }
daemon-common = { path = "../daemon-common" }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "sync"] }
tracing-test = { version = "0.2", features = ["no-env-filter"] }
tempfile = "3"
